--- a/videosparte4.html
+++ b/videosparte4.html
@@ -3,10 +3,10 @@
 <head>
 
 <!-- En el <head> de tu HTML -->
-    <meta property="og:title" content="Título de tu sitio web">
-    <meta property="og:description" content="Descripción breve de tu sitio web">
+    <meta property="og:title" content="video-01.mp4">
+    <meta property="og:description" content="mirar video">
     <meta property="og:image" content="https://ia800209.us.archive.org/24/items/imagen-13kwlkrl/Imagen6lekrlke.png">
-    <meta property="og:url" content="URL_COMPLETA_DE_TU_SITIO_WEB">
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
 
 
