--- a/videosparte4.html
+++ b/videosparte4.html
@@ -3,8 +3,8 @@
 <head>
 
 <!-- En el <head> de tu HTML -->
-    <meta property="og:title" content="video-01.mp4">
-    <meta property="og:description" content="mirar video">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
     <meta property="og:image" content="https://ia800209.us.archive.org/24/items/imagen-13kwlkrl/Imagen6lekrlke.png">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
