--- a/index.html
+++ b/index.html
@@ -65,26 +65,8 @@
     <h1> Mejores videos</h1>
     <div class="d-grid gap-3">
       <!-- Enlaces a los videos -->
-      <a href="video 1.html" target="_blank" class="btn btn-custom">Ver videos parte 1</a>
-      <a href="video 2.html" target="_blank" class="btn btn-custom">Ver videos parte 2</a>
-      <a href="video 3.html" target="_blank" class="btn btn-custom">Ver videos parte 3</a>
-      <a href="video 4.html" target="_blank" class="btn btn-custom">Ver videos parte 4</a>
-      <a href="video 5.html" target="_blank" class="btn btn-custom">Ver videos parte 5</a>
-      <a href="video 6.html" target="_blank" class="btn btn-custom">Ver videos parte 6</a>
-      <a href="video 7.html" target="_blank" class="btn btn-custom">Ver videos parte 7</a>
-      <a href="video 8.html" target="_blank" class="btn btn-custom">Ver videos parte 8</a>
-      <a href="video 9.html" target="_blank" class="btn btn-custom">Ver videos parte 9</a>
-      <a href="video 10.html" target="_blank" class="btn btn-custom">Ver videos parte 10</a>
-      <a href="video 11.html" target="_blank" class="btn btn-custom">Ver videos parte 11</a>
-      <a href="video 12.html" target="_blank" class="btn btn-custom">Ver videos parte 12</a>
-      <a href="video 13.html" target="_blank" class="btn btn-custom">Ver videos parte 13</a>
-      <a href="video 14.html" target="_blank" class="btn btn-custom">Ver videos parte 14</a>
-      <a href="video 15.html" target="_blank" class="btn btn-custom">Ver videos parte 15</a>
-      <a href="video 16.html" target="_blank" class="btn btn-custom">Ver videos parte 16</a>
-      <a href="video 17.html" target="_blank" class="btn btn-custom">Ver videos parte 17</a>
-      <a href="video 18.html" target="_blank" class="btn btn-custom">Ver videos parte 18</a>
-      <a href="video 19.html" target="_blank" class="btn btn-custom">Ver videos parte 19</a>
-      <a href="video 20.html" target="_blank" class="btn btn-custom">Ver videos parte 20</a>
+      <a href="video 1.html" target="_blank" class="btn btn-custom">Ver videos </a>
+      
 
 
 
