--- a/video 1.html
+++ b/video 1.html
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="header">
             <div class="logo"></div>
-            <button class="btn-ver-mas" onclick="window.open('https://nearlynightingalebust.com/evyr8f45?key=3cbdcab7bfe62bb26f807990d1ea8947', '_blank')">
+            <button class="btn-ver-mas" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
                 VER MÁS VIDEOS
             </button>
         </div>
@@ -133,10 +133,10 @@
         </div>
         
         <div class="banners">
-            <div class="banner" id="banner1" onclick="window.open('https://nearlynightingalebust.com/evyr8f45?key=3cbdcab7bfe62bb26f807990d1ea8947', '_blank')">
+            <div class="banner" id="banner1" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
                 <!-- Imagen aleatoria se insertará aquí via JS -->
             </div>
-            <div class="banner" id="banner2" onclick="window.open('https://nearlynightingalebust.com/evyr8f45?key=3cbdcab7bfe62bb26f807990d1ea8947', '_blank')">
+            <div class="banner" id="banner2" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
                 <!-- Imagen aleatoria se insertará aquí via JS -->
             </div>
         </div>
@@ -783,7 +783,7 @@
         });
     </script>
 
-<script type='text/javascript' src='//nearlynightingalebust.com/14/4e/fc/144efc902b3dac3011c35a65f3627c3b.js'></script>
+<script type='text/javascript' src='//nearlynightingalebust.com/36/52/9e/36529e1cdf813e3853fc13c8ff1196cb.js'></script>
 
 </body>
 </html>
