--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h1> Mejores videos</h1>
     <div class="d-grid gap-3">
       <!-- Enlaces a los videos -->
-      <a href="video 1.html" target="_blank" class="btn btn-custom">Ver videos </a>
+      <a href="video 1.html" target="_blank" class="btn btn-custom">Ver video</a>
       
 
 
