--- a/video 1.html
+++ b/video 1.html
@@ -123,23 +123,29 @@
     <div class="container">
         <div class="header">
             <div class="logo"></div>
-            <button class="btn-ver-mas" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
-                VER MÁS VIDEOS
-            </button>
+            <!--
+<button class="btn-ver-mas" onclick="window.open('video 1.html', '_blank')">
+    VER MÁS VIDEOS
+</button>
+-->
+
         </div>
         
         <div class="video-container">
             <iframe id="randomVideo" allowfullscreen></iframe>
         </div>
         
-        <div class="banners">
-            <div class="banner" id="banner1" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
-                <!-- Imagen aleatoria se insertará aquí via JS -->
-            </div>
-            <div class="banner" id="banner2" onclick="window.open('https://otieu.com/4/9411316', '_blank')">
-                <!-- Imagen aleatoria se insertará aquí via JS -->
-            </div>
-        </div>
+        <!--
+<div class="banners">
+    <div class="banner" id="banner1" onclick="window.open('video 1.html', '_blank')">
+        <!-- Imagen aleatoria se insertará aquí via JS -->
+    </div>
+    <div class="banner" id="banner2" onclick="window.open('video 1.html', '_blank')">
+        <!-- Imagen aleatoria se insertará aquí via JS -->
+    </div>
+</div>
+-->
+
     </div>
 
     <script>
