--- a/botones.html
+++ b/botones.html
@@ -59,8 +59,13 @@
   <h1>Selecciona un botón</h1>
   <div class="button-container">
     <!-- Botones con enlaces -->
-    <button onclick="window.location.href='videos.html'">Ver Videos</button>
-    
+    <button onclick="window.location.href='Emilia Ramírez.html'">boton 1</button>
+    <button onclick="window.location.href='Daniela Romero.html'">boton 2</button>
+    <button onclick="window.location.href='Fernanda Jiménez.html'">boton 3</button>
+    <button onclick="window.location.href='Alejandra Cruz.html'">boton 4</button>
+    <button onclick="window.location.href='Carolina Chávez.html'">boton 5 </button>
+    <button onclick="window.location.href='Paola Moreno.html'">boton 6 </button>
+    <button onclick="window.location.href='valentina.html'">boton 7 facebook </button>
   </div>
 </body>
 </html>
