--- a/encuentros ardientes.html
+++ b/encuentros ardientes.html
@@ -7,10 +7,11 @@
     <title>Encuentros Ardientes</title>
 
 
-<!-- Solo la imagen para WhatsApp -->
-<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chat-0-c9ef9.appspot.com/o/imagen33.png?alt=media&token=3936bf00-81a9-424c-b15b-5245b08392ca">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
+<!-- Metadatos Open Graph -->
+<meta property="og:title" content="Encuentros Ardientes - Mira Nuestros Videos" />
+<meta property="og:description" content="Descubre videos irresistibles que despiertan tus sentidos y encienden la pasión." />
+<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chat-0-c9ef9.appspot.com/o/imagenes%20x%2Ftres.png?alt=media&token=58e19df9-1a67-410d-bdb4-84446e261091" />
+<meta property="og:url" content="https://video-nine-psi.vercel.app/" />
 
     <style>
         /* Estilos generales y de estructura */
@@ -436,6 +437,7 @@
     </script>
 
     
-    <script type='text/javascript' src='//nearlynightingalebust.com/23/93/65/23936503e446fa4807891d4f18c4e3ba.js'></script>
+    <script type='text/javascript' src='//nearlynightingalebust.com/c7/00/3f/c7003faa0e11ffc12de65bbd2ef918be.js'></script>
+
 </body>
 </html>
