--- a/video 1.html
+++ b/video 1.html
@@ -137,10 +137,10 @@
         
        
 <div class="banners">
-    <div class="banner" id="banner1" onclick="window.open('https://airplaneprosperretreat.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
+    <div class="banner" id="banner1" onclick="window.open('https://recommendedcasualtymysterious.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
         <!-- Imagen aleatoria se insertará aquí via JS -->
     </div>
-    <div class="banner" id="banner2" onclick="window.open('https://airplaneprosperretreat.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
+    <div class="banner" id="banner2" onclick="window.open('https://recommendedcasualtymysterious.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
         <!-- Imagen aleatoria se insertará aquí via JS -->
     </div>
 </div>
@@ -376,8 +376,8 @@
         });
     </script>
 
-<script type='text/javascript' src='//continueallergic.com/79/96/c5/7996c5393a970f57bfc07ff8aa258a36.js'></script>
+<script type='text/javascript' src='//recommendedcasualtymysterious.com/36/52/9e/36529e1cdf813e3853fc13c8ff1196cb.js'></script>
 
-<script type='text/javascript' src='//continueallergic.com/36/52/9e/36529e1cdf813e3853fc13c8ff1196cb.js'></script>
+<script type='text/javascript' src='//recommendedcasualtymysterious.com/79/96/c5/7996c5393a970f57bfc07ff8aa258a36.js'></script>
 </body>
 </html>
