--- a/video 1.html
+++ b/video 1.html
@@ -134,8 +134,14 @@
         <div class="video-container">
             <iframe id="randomVideo" allowfullscreen></iframe>
         </div>
+
+
+
+        <script async="async" data-cfasync="false" src="//recommendedcasualtymysterious.com/70167da92f58b2f1f309a708ed557a0f/invoke.js"></script>
+<div id="container-70167da92f58b2f1f309a708ed557a0f"></div>
         
        
+<!-- 
 <div class="banners">
     <div class="banner" id="banner1" onclick="window.open('https://recommendedcasualtymysterious.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
         <!-- Imagen aleatoria se insertará aquí via JS -->
@@ -143,7 +149,8 @@
     <div class="banner" id="banner2" onclick="window.open('https://recommendedcasualtymysterious.com/a5pzqq0ft4?key=8fe249d66ffe2c187b5976cb02526410', '_blank')">
         <!-- Imagen aleatoria se insertará aquí via JS -->
     </div>
-</div>
+</div> 
+-->
 
 
     </div>
