--- a/video 1.html
+++ b/video 1.html
@@ -537,15 +537,14 @@ window.document.querySelectorAll||(document.querySelectorAll=document.body.query
 
 </script>
 
-<script type="application/javascript">
-    pn_idzone = 5743706;
-    pn_sleep_seconds = 0;
-    pn_is_self_hosted = 1;
-    pn_soft_ask = 0;
-    pn_filename = "/worker.js"; 
-</script>
+<script async type="application/javascript" src="https://a.pemsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e33" data-zoneid="5743788"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 
-<script type="application/javascript" src="https://js.wpnsrv.com/pn.php"></script>
+
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e10" data-zoneid="5743796"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 
 
 </body>
