--- a/video 1.html
+++ b/video 1.html
@@ -268,22 +268,8 @@
             </div>
         </div>
 
-        <!-- BANNER - AHORA MÁS VISIBLE -->
-<div class="adsterra-banner">
-    <div class="banner-container">
-        <div class="banner-title">💎 Contenido Exclusivo</div>
-        <script type="text/javascript">
-            atOptions = {
-                'key' : 'bb5ad8ee5ca6dc23e9ee683d32b31789',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//recommendedcasualtymysterious.com/bb5ad8ee5ca6dc23e9ee683d32b31789/invoke.js"></script>
-    </div>
-</div>
+        <script async="async" data-cfasync="false" src="//recommendedcasualtymysterious.com/46731f9dec8e0cf5d7c99524a3cc2c9d/invoke.js"></script>
+<div id="container-46731f9dec8e0cf5d7c99524a3cc2c9d"></div>
         
         <footer>
             <p>Videos Premium &copy; 2025</p>
@@ -586,7 +572,6 @@
     </script>
 
 <script type='text/javascript' src='//recommendedcasualtymysterious.com/36/e1/00/36e10022d83ec0ce83d7805cadf1bd07.js'></script>
-
 
 <script type='text/javascript' src='//recommendedcasualtymysterious.com/01/72/07/01720761c58b2f41b007a846eff43913.js'></script>
 
