--- a/categoria Cumshot.html
+++ b/categoria Cumshot.html
@@ -925,8 +925,32 @@
 • LocalStorage activado: SÍ`);
     </script>
 
-<script type='text/javascript' src='//recommendedcasualtymysterious.com/36/e1/00/36e10022d83ec0ce83d7805cadf1bd07.js'></script>
-<script type='text/javascript' src='//recommendedcasualtymysterious.com/01/72/07/01720761c58b2f41b007a846eff43913.js'></script>
+<script>
+(function(flmwfd){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = flmwfd || {};
+s.src = "\/\/precious-catch.com\/b\/X_V.sEd\/GAlR0dYoWUcI\/deUmx9vu_ZyULlRkIPeT\/YB3bMID\/AS4FMpDyEUtiNzjscYw\/MWDYgZwvMDgJ";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
+
+<script>
+(function(fjomd){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = fjomd || {};
+s.src = "\/\/female-agent.com\/c.DP9n6qbK2_5\/lASiWIQn9\/NgjycNwYM\/DFcx3NNRSh0t2NNEzBAHwWNqzScL2m";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
 
 </body>
