--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta name="8e315795578cd3b12937bebf2c5e67e44a7c0686" content="8e315795578cd3b12937bebf2c5e67e44a7c0686" />
 
+    <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
