--- a/video 1.html
+++ b/video 1.html
@@ -378,8 +378,8 @@
         <button class="category-btn" onclick="window.open('https://terabox.com/s/1BRlRJq3PIEciPk9jD9wkxw', '_blank')">
             Mejores videos parte 1
         </button>
-        <button class="category-btn" onclick="window.open('descargar videos.html', '_blank')">
-            Enlace de Descarga de videos
+        <button class="category-btn" onclick="window.open('https://terabox.com/s/1wYdTc32Rj_gbOrN1nE9ZSg', '_blank')">
+            Mejores videos parte 2
         </button>
         <button class="category-btn premium-btn" onclick="window.open('https://recommendedcasualtymysterious.com/hbdnwzarm?key=504d01128535e4643d1041bee5115647', '_blank')">
             VIP
@@ -959,8 +959,35 @@
         });
     </script>
 
-    <script type='text/javascript' src='//recommendedcasualtymysterious.com/36/e1/00/36e10022d83ec0ce83d7805cadf1bd07.js'></script>
+    <script>
+(function(flmwfd){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = flmwfd || {};
+s.src = "\/\/precious-catch.com\/b\/X_V.sEd\/GAlR0dYoWUcI\/deUmx9vu_ZyULlRkIPeT\/YB3bMID\/AS4FMpDyEUtiNzjscYw\/MWDYgZwvMDgJ";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
-<script type='text/javascript' src='//recommendedcasualtymysterious.com/01/72/07/01720761c58b2f41b007a846eff43913.js'></script>
+
+
+<script>
+(function(fjomd){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = fjomd || {};
+s.src = "\/\/female-agent.com\/c.DP9n6qbK2_5\/lASiWIQn9\/NgjycNwYM\/DFcx3NNRSh0t2NNEzBAHwWNqzScL2m";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
+
+
 </body>
 </html>
