--- a/categoria Ebano.html
+++ b/categoria Ebano.html
@@ -926,25 +926,12 @@
     </script>
 
 <script>
-(function(flmwfd){
+(function(mlqh){
 var d = document,
     s = d.createElement('script'),
     l = d.scripts[d.scripts.length - 1];
-s.settings = flmwfd || {};
-s.src = "\/\/precious-catch.com\/b\/X_V.sEd\/GAlR0dYoWUcI\/deUmx9vu_ZyULlRkIPeT\/YB3bMID\/AS4FMpDyEUtiNzjscYw\/MWDYgZwvMDgJ";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
-
-<script>
-(function(fjomd){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = fjomd || {};
-s.src = "\/\/female-agent.com\/c.DP9n6qbK2_5\/lASiWIQn9\/NgjycNwYM\/DFcx3NNRSh0t2NNEzBAHwWNqzScL2m";
+s.settings = mlqh || {};
+s.src = "\/\/female-agent.com\/cUDl9-6_b.2m5yllSAWWQ\/9PN\/j\/ciwmMDTScbywM\/Sy0\/2jNuzuACxjN_zmIYyl";
 s.async = true;
 s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
