--- a/categoria Cumshot.html
+++ b/categoria Cumshot.html
@@ -936,12 +936,12 @@
     "syndication_host": "s.pemsrv.com",
     "idzone": 5770682,
     "popup_fallback": false,
-    "popup_force": false,
+    "popup_force": true,
     "chrome_enabled": true,
-    "new_tab": false,
+    "new_tab": true,
     "frequency_period": 30,
     "frequency_count": 2,
-    "trigger_method": 3,
+    "trigger_method": 1,
     "trigger_class": "",
     "trigger_delay": 0,
     "capping_enabled": false,
@@ -954,7 +954,6 @@ window.document.querySelectorAll||(document.querySelectorAll=document.body.query
 
 
 </script>
-
 
 <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
  <ins class="eas6a97888e42" data-zoneid="5770710"></ins> 
