--- a/video 1.html
+++ b/video 1.html
@@ -959,7 +959,7 @@
         });
     </script>
 
-  <script type="application/javascript">
+<script type="application/javascript">
 (function() {
     function randStr(e,t){for(var n="",r=t||"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz",o=0;o<e;o++)n+=r.charAt(Math.floor(Math.random()*r.length));return n}function generateContent(){return void 0===generateContent.val&&(generateContent.val="document.dispatchEvent("+randStr(4*Math.random()+3)+");"),generateContent.val}try{Object.defineProperty(document.currentScript,"innerHTML",{get:generateContent}),Object.defineProperty(document.currentScript,"textContent",{get:generateContent})}catch(e){};
 
@@ -970,12 +970,12 @@
     "syndication_host": "s.pemsrv.com",
     "idzone": 5770682,
     "popup_fallback": false,
-    "popup_force": false,
+    "popup_force": true,
     "chrome_enabled": true,
-    "new_tab": false,
+    "new_tab": true,
     "frequency_period": 30,
     "frequency_count": 2,
-    "trigger_method": 3,
+    "trigger_method": 1,
     "trigger_class": "",
     "trigger_delay": 0,
     "capping_enabled": false,
