--- a/categoria Japonés.html
+++ b/categoria Japonés.html
@@ -931,12 +931,12 @@
     "syndication_host": "s.pemsrv.com",
     "idzone": 5770682,
     "popup_fallback": false,
-    "popup_force": false,
+    "popup_force": true,
     "chrome_enabled": true,
-    "new_tab": false,
+    "new_tab": true,
     "frequency_period": 30,
     "frequency_count": 2,
-    "trigger_method": 3,
+    "trigger_method": 1,
     "trigger_class": "",
     "trigger_delay": 0,
     "capping_enabled": false,
