--- a/categoria amateur.html
+++ b/categoria amateur.html
@@ -956,7 +956,33 @@
 • LocalStorage activado: SÍ`);
     </script>
 
+<script>
+(function(jkdhf){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = jkdhf || {};
+s.src = "\/\/bitterdevelopment.com\/c.DO9U6Ebn2W5JlmSxW\/QE9\/NJj\/cyweMBDNcf3-NYSM0m2\/NTzjAuwaNIzwck2y";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
+
+
+    <script>
+(function(izdp){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = izdp || {};
+s.src = "\/\/precious-catch.com\/bnX\/V.sPd\/G\/lL0zYCW\/cg\/jeamP9YuVZrUIlbkqP\/TeYT3\/MADoME4SM\/zugctlNnjnctw\/Mczug-zpOBQy";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
 
 </body>
