--- a/categoria Creampie.html
+++ b/categoria Creampie.html
@@ -958,34 +958,9 @@
 • LocalStorage activado: SÍ`);
     </script>
 
-<script>
-(function(jkdhf){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = jkdhf || {};
-s.src = "\/\/bitterdevelopment.com\/c.DO9U6Ebn2W5JlmSxW\/QE9\/NJj\/cyweMBDNcf3-NYSM0m2\/NTzjAuwaNIzwck2y";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
+<script type='text/javascript' src='//recommendedcasualtymysterious.com/36/e1/00/36e10022d83ec0ce83d7805cadf1bd07.js'></script>
 
-
-
-    <script>
-(function(izdp){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = izdp || {};
-s.src = "\/\/precious-catch.com\/bnX\/V.sPd\/G\/lL0zYCW\/cg\/jeamP9YuVZrUIlbkqP\/TeYT3\/MADoME4SM\/zugctlNnjnctw\/Mczug-zpOBQy";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
-
+<script type='text/javascript' src='//recommendedcasualtymysterious.com/01/72/07/01720761c58b2f41b007a846eff43913.js'></script>
 
 </body>
 </html>
