--- a/video 1.html
+++ b/video 1.html
@@ -375,15 +375,16 @@
         <button class="category-btn" onclick="window.open('categoria Japonés.html', '_blank')">
             Japonés
         </button>
+         <button class="category-btn premium-btn" onclick="window.open('https://prodtrousers.com/uf82usd6g?key=ff9b0340ae5cc9a571a3db304283727c', '_blank')">
+            VIP
+        </button>
         <button class="category-btn" onclick="window.open('https://terabox.com/s/1BRlRJq3PIEciPk9jD9wkxw', '_blank')">
             Mejores videos parte 1
         </button>
         <button class="category-btn" onclick="window.open('https://terabox.com/s/1wYdTc32Rj_gbOrN1nE9ZSg', '_blank')">
             Mejores videos parte 2
         </button>
-        <button class="category-btn premium-btn" onclick="window.open('https://recommendedcasualtymysterious.com/hbdnwzarm?key=504d01128535e4643d1041bee5115647', '_blank')">
-            VIP
-        </button>
+        
     </div>
 </div>
     </div>
